Fix anchor scrolling on mobile

--- a/packages/theme-default/src/less/website/body.less
+++ b/packages/theme-default/src/less/website/body.less
@@ -24,35 +24,6 @@
             overflow-y: auto;
         }
 
-        .page-wrapper {
-            position: relative;
-            outline: none;
-
-            .page-inner {
-                max-width: 800px;
-                margin: 0px auto;
-                padding: 20px 0px 40px 0px;
-
-                section {
-                    margin: 0px 0px;
-                    padding: 5px 15px;
-
-                    background: @page-background;
-                    border-radius: 2px;
-                    line-height: @content-line-height;
-                    font-size: @default-font-size;
-                }
-
-                .btn-group {
-                    .btn {
-                        border-radius: 0px;
-                        background: #eee;
-                        border: 0px;
-                    }
-                }
-            }
-        }
-
         @media (max-width: @mobileMaxWidth) {
             .transition-transform(@sidebar-transition-duration ease);
             padding-bottom: 20px;
